...
  "anAttachmentExceedsTheMaximum": "Bir ek izin verilen maksimum boyutu aşıyor.",
  "file": "Dosya",
  "sent": "Gönderilenler",
  "trash": "Çöp Kutusu",
  "archive": "Arşiv",
  "other": "Diğer",
  "inbox": "Gelen Kutusu",
  "allMail": "Tüm mailler",
  "outbox": "Giden Kutusu",
  "pendingEmails": "Bekleyen Mailler",
  "starred": "Yıldızlılar",
  "snoozed": "Ertelenenler",
  "drafts": "Taslaklar",
...
